fix File to import not found or unreadable: mixins

--- a/blog/css/main.scss
+++ b/blog/css/main.scss
@@ -3,7 +3,7 @@ layout: null
 sitemap: false
 ---
 
-$baseurl: "https://freedompaul.github.io";
+$baseurl: "{{ site.baseurl }}";
 $body-background-color: #2B2E31;
 
 $content-max-width: 800px;
